css/ll-giving-weekend.webflow.css
/* ... */
.hero-column-left {
  position: static;
  height: auto;
  max-height: none;
  min-height: auto;
  padding-top: 60px;
  padding-bottom: 90px;
  padding-left: 60px;
  background-color: rgba(18, 0, 1, 0.93);
}

.hero-column-right {
  position: static;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: visible;
  height: auto;
  max-height: none;
  min-height: auto;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-top: 0px;
  padding-right: 0px;
  padding-bottom: 80px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-color: #fff;
  background-image: -webkit-gradient(linear, left top, left bottom, from(hsla(0, 0%, 100%, 0.5)), to(hsla(0, 0%, 100%, 0.5)));
  background-image: linear-gradient(180deg, hsla(0, 0%, 100%, 0.5), hsla(0, 0%, 100%, 0.5));
}

.hero-feature-image {
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: hidden;
  width: auto;
  height: 70vh;
  margin-left: -140px;
  padding-bottom: 20px;
  padding-left: 20px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  -webkit-box-align: stretch;
  -webkit-align-items: stretch;
  -ms-flex-align: stretch;
  align-items: stretch;
  background-image: linear-gradient(36deg, rgba(12, 0, 1, 0.19), rgba(127, 0, 9, 0)), url('../images/HeroImage.png');
  background-position: 0px 0px, 50% 50%;
  background-size: auto, cover;
  box-shadow: 4px 3px 20px 0 rgba(0, 0, 0, 0.32);
  background-clip: border-box;
  -webkit-text-fill-color: inherit;
}

.explainer-section {
  height: auto;
}

.div-block-2 {
  position: relative;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 487px;
  height: 1089px;
  margin-top: -406px;
  margin-bottom: 0px;
  padding-bottom: 0px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
  background-image: url('../images/Cookies-and-Tag.png');
  background-position: 50% 50%;
  background-size: cover;
  background-repeat: no-repeat;
}

.container {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 0px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.column-2 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  margin-bottom: 0px;
  padding-right: 0px;
  -webkit-box-pack: end;
  -webkit-justify-content: flex-end;
  -ms-flex-pack: end;
  justify-content: flex-end;
}

.heading {
  position: static;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  margin-right: 0px;
  padding-right: 0px;
  border-style: none;
  border-width: 1px;
  border-color: #fff;
  font-family: din-2014-narrow, sans-serif;
  color: #fff;
  font-size: 60px;
  line-height: 100%;
  font-weight: 400;
  letter-spacing: 3px;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.32);
}

.nav {
  position: relative;
  z-index: 0;
  height: 90px;
}

.hero-nav-columns {
  height: 100.00000847710504%;
}

.hero-paragraph {
  margin-bottom: 20px;
  padding-top: 20px;
  padding-right: 130px;
  padding-bottom: 0px;
}

.para {
  margin-bottom: 0px;
  padding-left: 0px;
  font-family: Barlow, sans-serif;
  color: #fff;
  font-size: 18px;
  line-height: 180%;
  font-weight: 300;
  letter-spacing: 0.5px;
  text-decoration: none;
  -webkit-column-count: auto;
  column-count: auto;
}

.para.catch {
  text-decoration: underline;
}

.cta-paragraph {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 99.999992514855%;
  margin-top: 0px;
  padding-top: 0px;
  padding-left: 0px;
  -webkit-box-orient: vertical;
  -webkit-box-direction: normal;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  -webkit-box-align: start;
  -webkit-align-items: flex-start;
  -ms-flex-align: start;
  align-items: flex-start;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  font-family: Barlow, sans-serif;
  color: #000;
  font-size: 18px;
  line-height: 180%;
  font-weight: 300;
  letter-spacing: 0.5px;
  -webkit-column-count: auto;
  column-count: auto;
}

.heading-black-bg {
  position: static;
  z-index: 1;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-top: 0px;
  margin-right: 0px;
  margin-left: 0px;
  padding-top: 0px;
  padding-right: 8px;
  padding-left: 0px;
  border-style: none;
  border-width: 1px;
  border-color: #fff;
  background-color: transparent;
  font-family: din-2014-narrow, sans-serif;
  color: #fff;
  font-size: 60px;
  line-height: 100%;
  font-weight: 400;
  letter-spacing: 3px;
  text-decoration: none;
  text-transform: uppercase;
  text-shadow: 4px 4px 6px rgba(0, 0, 0, 0.32);
}
/* ... */

